most of terraform done, docker branch next

--- a/Terraform/compose.yml
+++ b/Terraform/compose.yml
@@ -5,15 +5,23 @@ services:
     image: <backend image tagged for dockerhub>:latest
     environment:
       - DB_HOST=${rds_endpoint}
+      - MIGRATE_DB=${migrate}
     ports:
       - "8000:8000"
     command: >
-          sh -c "python manage.py migrate &&
-                python manage.py dumpdata --database=sqlite --natural-foreign --natural-primary -e contenttypes -e auth.Permission --indent 4 > datadump.json &&
-                python manage.py loaddata datadump.json &&
-                rm -f db.sqlite3 &&
-                python manage.py runserver 0.0.0.0:8000"
-
+          sh -c "run_migrations() {
+                  if [[ ${migrate} ]]
+                  then
+                    python manage.py migrate &&
+                    python manage.py dumpdata --database=sqlite --natural-foreign --natural-primary -e contenttypes -e auth.Permission --indent 4 > datadump.json &&
+                    python manage.py loaddata datadump.json &&
+                    rm -f db.sqlite3
+                  fi
+                };
+                run_migrations &&
+                mkdir -p /home/ubuntu/logs &&
+                touch /home/ubuntu/logs/backend.log &&
+                python manage.py runserver 0.0.0.0:8000 > /home/ubuntu/logs/backend.log 2>&1"
   frontend:
     image: <frontend image tagged for dockerhub>:latest
     ports:
