add command field to frontend service, still need to create and publish images

--- a/Terraform/compose.yml
+++ b/Terraform/compose.yml
@@ -13,5 +13,6 @@ services:
     image: <frontend image tagged for dockerhub>:latest
     ports:
       - "3000:3000"
+    command: ["npm", "start"]
     depends_on:
       - backend
