--- a/Terraform/compose.yml
+++ b/Terraform/compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   backend:
     image: postig0x/ecomm_back:latest
+    container_name: backend
     environment:
       - DB_HOST=${rds_endpoint}
       - MIGRATE_DB=${migrate}
@@ -11,6 +12,7 @@ services:
     command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
   frontend:
     image: postig0x/ecomm_front:latest
+    container_name: frontend
     ports:
       - "3000:3000"
     command: ["npm", "start"]
